fix invalid contrast

--- a/src/app/components/court-detail/court-detail.component.css
+++ b/src/app/components/court-detail/court-detail.component.css
@@ -59,6 +59,10 @@ form {
   color: white;
 }
 
+.cancel-button {
+  color: var(--text-color);
+}
+
 .loading-overlay {
   position: absolute;
   top: 0;
